// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GaugeForm component should render a form to set up a gauge and a numberGaugeForm below 1`] = `
<div
  className="gauges-vote-form"
  id="gauge-form-2"
>
  <Translate
    number={2}
    value="administration.gauge"
  />
  <div
    className="flex margin-m"
  >
    <FormControlWithLabel
      helperText="Depending on the objective of the gauge module, incite the participants to take action."
      helperUrl="https://s3-eu-west-1.amazonaws.com/bluenove-assembl-images/helper6.png"
      id="gauge-vote-instructions-2"
      label="Instructions for the gauge vote"
      labelAlwaysVisible={false}
      onChange={[MockFunction]}
      required={true}
      type="text"
      value="Please vote on this numeral gauge"
    />
  </div>
  <FormGroup
    bsClass="form-group"
  >
    <div
      className="flex"
    >
      <label
        htmlFor="dropdown-2"
      >
        <Translate
          value="administration.nbTicks"
        />
      </label>
    </div>
    <SplitButton
      className="admin-dropdown"
      id="dropdown-2"
      onSelect={[Function]}
      required={true}
      title={10}
    >
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={2}
        header={false}
      >
        2
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={3}
        header={false}
      >
        3
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={4}
        header={false}
      >
        4
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={5}
        header={false}
      >
        5
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={6}
        header={false}
      >
        6
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={7}
        header={false}
      >
        7
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={8}
        header={false}
      >
        8
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={9}
        header={false}
      >
        9
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={10}
        header={false}
      >
        10
      </MenuItem>
    </SplitButton>
  </FormGroup>
  <div
    className="margin-m"
  >
    <Radio
      bsClass="radio"
      checked={false}
      disabled={false}
      id="radio-text-2"
      inline={false}
      name="gauge-type-1234"
      onChange={[MockFunction]}
      title=""
    >
      <Translate
        value="administration.textValue"
      />
    </Radio>
    <Radio
      bsClass="radio"
      checked={true}
      disabled={false}
      id="radio-number-2"
      inline={false}
      name="gauge-type-1234"
      onChange={[MockFunction]}
      title=""
    >
      <Translate
        value="administration.numberValue"
      />
    </Radio>
  </div>
  <DumbNumberGaugeForm
    handleMaxChange={[Function]}
    handleMinChange={[Function]}
    handleUnitChange={[Function]}
    id="1234"
    maximum={100}
    minimum={1}
    unit="%"
  />
  <div
    className="separator"
  />
</div>
`;

exports[`GaugeForm component should render a form to set up a gauge and a textGaugeForm below 1`] = `
<div
  className="gauges-vote-form"
  id="gauge-form-2"
>
  <Translate
    number={2}
    value="administration.gauge"
  />
  <div
    className="flex margin-m"
  >
    <FormControlWithLabel
      helperText="Depending on the objective of the gauge module, incite the participants to take action."
      helperUrl="https://s3-eu-west-1.amazonaws.com/bluenove-assembl-images/helper6.png"
      id="gauge-vote-instructions-2"
      label="Instructions for the gauge vote"
      labelAlwaysVisible={false}
      onChange={[MockFunction]}
      required={true}
      type="text"
      value="Please vote on this textual gauge"
    />
  </div>
  <FormGroup
    bsClass="form-group"
  >
    <div
      className="flex"
    >
      <label
        htmlFor="dropdown-2"
      >
        <Translate
          value="administration.nbTicks"
        />
      </label>
    </div>
    <SplitButton
      className="admin-dropdown"
      id="dropdown-2"
      onSelect={[Function]}
      required={true}
      title={2}
    >
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={2}
        header={false}
      >
        2
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={3}
        header={false}
      >
        3
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={4}
        header={false}
      >
        4
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={5}
        header={false}
      >
        5
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={6}
        header={false}
      >
        6
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={7}
        header={false}
      >
        7
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={8}
        header={false}
      >
        8
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={9}
        header={false}
      >
        9
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={10}
        header={false}
      >
        10
      </MenuItem>
    </SplitButton>
  </FormGroup>
  <div
    className="margin-m"
  >
    <Radio
      bsClass="radio"
      checked={true}
      disabled={false}
      id="radio-text-2"
      inline={false}
      name="gauge-type-5678"
      onChange={[MockFunction]}
      title=""
    >
      <Translate
        value="administration.textValue"
      />
    </Radio>
    <Radio
      bsClass="radio"
      checked={false}
      disabled={false}
      id="radio-number-2"
      inline={false}
      name="gauge-type-5678"
      onChange={[MockFunction]}
      title=""
    >
      <Translate
        value="administration.numberValue"
      />
    </Radio>
  </div>
  <DumbTextGaugeForm
    choices={
      Immutable.List [
        Immutable.Map {
          "id": "2233",
          "labelEntries": Immutable.List [],
          "value": 1,
        },
        Immutable.Map {
          "id": "3344",
          "labelEntries": Immutable.List [],
          "value": 2,
        },
      ]
    }
  />
  <div
    className="separator"
  />
</div>
`;

exports[`GaugeForm component should render a gauge form with no radio if canChangeType is false 1`] = `
<div
  className="gauges-vote-form"
  id="gauge-form-2"
>
  <Translate
    number={2}
    value="administration.gauge"
  />
  <div
    className="flex margin-m"
  >
    <FormControlWithLabel
      helperText="Depending on the objective of the gauge module, incite the participants to take action."
      helperUrl="https://s3-eu-west-1.amazonaws.com/bluenove-assembl-images/helper6.png"
      id="gauge-vote-instructions-2"
      label="Instructions for the gauge vote"
      labelAlwaysVisible={false}
      onChange={[MockFunction]}
      required={true}
      type="text"
      value="Please vote on this textual gauge"
    />
  </div>
  <FormGroup
    bsClass="form-group"
  >
    <div
      className="flex"
    >
      <label
        htmlFor="dropdown-2"
      >
        <Translate
          value="administration.nbTicks"
        />
      </label>
    </div>
    <SplitButton
      className="admin-dropdown"
      id="dropdown-2"
      onSelect={[Function]}
      required={true}
      title={2}
    >
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={2}
        header={false}
      >
        2
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={3}
        header={false}
      >
        3
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={4}
        header={false}
      >
        4
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={5}
        header={false}
      >
        5
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={6}
        header={false}
      >
        6
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={7}
        header={false}
      >
        7
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={8}
        header={false}
      >
        8
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={9}
        header={false}
      >
        9
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={10}
        header={false}
      >
        10
      </MenuItem>
    </SplitButton>
  </FormGroup>
  <DumbTextGaugeForm
    choices={
      Immutable.List [
        Immutable.Map {
          "id": "2233",
          "labelEntries": Immutable.List [],
          "value": 1,
        },
        Immutable.Map {
          "id": "3344",
          "labelEntries": Immutable.List [],
          "value": 2,
        },
      ]
    }
  />
  <div
    className="separator"
  />
</div>
`;
